<resources>
    <string name="app_name">Tutorial 4</string>
    <string name="b1">B1</string>
    <string name="b2">B2</string>
    <string name="b3">B3</string>
    <string name="submit">Submit</string>
    <string name="age">Age</string>
    <string name="john_doe">John Doe</string>
    <string name="enter_name">Enter Name</string>
    <string name="btnWelcome">Welcome</string>
    <string name="btnGoodBye">Good Bye</string>
    <string name="msg1">Welcome to App</string>
    <string name="msg2">Good Bye</string>
</resources>